# Albion

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  data.yaml  items.tsv  requirements.txt  setup.cfg
albionoverlay/: CHANGELOG.md  cli.py
albionoverlay/detection/: resouce_detector.py  screenshots.py  tracker.py
albionoverlay/gui/: config_panel.py  detworker.py  draggable_list.py  overlay.py
albionoverlay/utils/: utils.py
logging/: price_log.csv  session_log.csv
