[metadata]
name = albion-overlay
version = 0.1.0
description = Albion Online Overlay
author = Michal Chudoba
license = MIT

[options]
packages = find:
install_requires =
    PyQt5
    opencv-python
    onnxruntime
    numpy
    mss
    requests
    pyyaml
python_requires = >=3.8

[options.entry_points]
console_scripts =
    albion-overlay = albionoverlay.cli:main