[metadata]
name = albion-overlay
version = 0.3.0
description = Albion Online Overlay
author = Michal Chudoba
license = MIT

[options]
packages = find:
install_requires =
    PyQt5
    opencv-python
    onnxruntime-gpu
    numpy
    mss
    requests
    pyyaml
    keyboard
python_requires = >=3.10

[options.entry_points]
console_scripts =
    albion-overlay = albionoverlay.cli:main